[gd_scene load_steps=31 format=3 uid="uid://d1clmf4bgmkru"]

[ext_resource type="Script" path="res://scenes/ghost/ghost.gd" id="1_hwq4a"]
[ext_resource type="Texture2D" uid="uid://dqdja3h5c4eey" path="res://assets/sprites/Kila/kila_sheet.png" id="2_dnlym"]
[ext_resource type="Texture2D" uid="uid://0frlxt6w4t0j" path="res://assets/sprites/Kila/kila_sprites_haunted.png" id="2_qhgje"]
[ext_resource type="AudioStream" uid="uid://ea6bhefiw135" path="res://assets/sfx/wooden-stairs-in-1.wav" id="3_dojqo"]
[ext_resource type="AudioStream" uid="uid://ch7ucim6qbuex" path="res://assets/sfx/wooden-stairs-in-2.wav" id="4_dcyvu"]
[ext_resource type="AudioStream" uid="uid://bbk20xh6famcn" path="res://assets/sfx/wooden-stairs-out-1.wav" id="5_3xnsk"]
[ext_resource type="AudioStream" uid="uid://cm2mybcxaxtde" path="res://assets/sfx/wooden-stairs-out-2.wav" id="6_6ibve"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a6hpp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nmaeu"]
size = Vector2(640, 640)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qfcvi"]
size = Vector2(52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_khedb"]
atlas = ExtResource("2_qhgje")
region = Rect2(0, 0, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_6i8yh"]
atlas = ExtResource("2_qhgje")
region = Rect2(288, 0, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_hu02k"]
atlas = ExtResource("2_qhgje")
region = Rect2(576, 0, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfn11"]
atlas = ExtResource("2_qhgje")
region = Rect2(0, 0, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yhfg"]
atlas = ExtResource("2_qhgje")
region = Rect2(0, 864, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj3ch"]
atlas = ExtResource("2_qhgje")
region = Rect2(0, 576, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_enqsv"]
atlas = ExtResource("2_qhgje")
region = Rect2(0, 288, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gbpv"]
atlas = ExtResource("2_qhgje")
region = Rect2(0, 864, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_v31ed"]
atlas = ExtResource("2_qhgje")
region = Rect2(288, 864, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt7da"]
atlas = ExtResource("2_qhgje")
region = Rect2(576, 864, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3wh8"]
atlas = ExtResource("2_qhgje")
region = Rect2(0, 576, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o1di"]
atlas = ExtResource("2_qhgje")
region = Rect2(288, 576, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jgrp"]
atlas = ExtResource("2_qhgje")
region = Rect2(576, 576, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ut88"]
atlas = ExtResource("2_qhgje")
region = Rect2(0, 288, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_smu81"]
atlas = ExtResource("2_qhgje")
region = Rect2(288, 288, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdwic"]
atlas = ExtResource("2_qhgje")
region = Rect2(576, 288, 288, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhrxx"]
atlas = ExtResource("2_dnlym")
region = Rect2(183, 122, 61, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tq7t"]
atlas = ExtResource("2_dnlym")
region = Rect2(183, 183, 61, 61)

[sub_resource type="SpriteFrames" id="SpriteFrames_20pxb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_khedb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6i8yh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khedb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hu02k")
}],
"loop": true,
"name": &"Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfn11")
}],
"loop": true,
"name": &"IdleDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yhfg")
}],
"loop": true,
"name": &"IdleLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj3ch")
}],
"loop": true,
"name": &"IdleRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_enqsv")
}],
"loop": true,
"name": &"IdleUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gbpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v31ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gbpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt7da")
}],
"loop": true,
"name": &"Left",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3wh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o1di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3wh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jgrp")
}],
"loop": true,
"name": &"Right",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ut88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smu81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ut88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdwic")
}],
"loop": true,
"name": &"Up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhrxx")
}],
"loop": true,
"name": &"kickLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tq7t")
}],
"loop": true,
"name": &"kickRight",
"speed": 1.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_i2t52"]
streams_count = 4
stream_0/stream = ExtResource("3_dojqo")
stream_1/stream = ExtResource("4_dcyvu")
stream_2/stream = ExtResource("5_3xnsk")
stream_3/stream = ExtResource("6_6ibve")

[node name="ghost" type="CharacterBody2D"]
script = ExtResource("1_hwq4a")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 32.0
simplify_epsilon = 32.0
avoidance_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_a6hpp")

[node name="detectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionArea"]
shape = SubResource("RectangleShape2D_nmaeu")
debug_color = Color(0.694581, 0.489989, 0.205408, 0.42)

[node name="hitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitArea"]
shape = SubResource("RectangleShape2D_qfcvi")
debug_color = Color(0.992642, 0, 0.249152, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.999996, 3)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_20pxb")
animation = &"Right"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_i2t52")
autoplay = true
bus = &"SFX"

[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="body_entered" from="detectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="hitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
